i learned i can combine multiple classes in css, i fixed my padding around my container so my flexbox worked properly, now i have to figure out why its not centered...even though it says centered, wish me luck

--- a/style.css
+++ b/style.css
@@ -41,36 +41,47 @@ li a:hover {
 }
 
 .header {
-    width: 50%;
+    
     color: white;
 }
 
-.intro {
-    width: 50%;
+.intro, .quote, .author {
     color: white;
+    max-width: 600px;
+    margin: 0 auto;
+    word-wrap: break-word;
 }
 
-.quote {
-    width: 50%;
-    color: white;
-}
-
-.author {
-    width: 50%;
-    color: white
+.content {
+    width: auto;
 }
 
 .container {
-    display:flex;
-    align-items: center
+display: flex;
+justify-content: flex-start;
+align-items: center;
+
    
 }
 
 .content {
-    margin: 85px;
+    margin-top: 85px;
+    margin-right: 20px;
+    margin-left: 85px;
+    margin-bottom: 85px;
     align-items: center;
 }
 
 .image-box {
-    margin: 85px;
+    margin-top: 85px;
+    margin-left: 20px;
+    margin-bottom: 85px;
+}
+
+/* i did not know you can combine multiple class id's?*/
+
+.content, .image-box {
+    width: auto;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
